--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -69,3 +69,18 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+.butterfly::-webkit-scrollbar{
+  width: 10px;
+}
+.butterfly::-webkit-scrollbar-thumb{
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+.butterfly::-webkit-scrollbar-track {
+  background: #888;
+  border-radius: 10px;
+}
+.butterfly::-webkit-scrollbar-thumb:hover {
+  background:lightgray;
+  
+}
